<resources>
    <string name="app_menu">菜单</string>
    <string name="app_share_tag">#虎踞龙蟠BBS#</string>
    <string name="app_share_link">链接：</string>
    <string name="app_title">虎踞龙蟠BBS Android客户端</string>
    <string name="version_name">1.4.3_v2</string>
    <string name="version_code">20140102</string>
    <string name="app_name">虎踞龙蟠BBS</string>
    <string name="post_title">标题</string>
    <string name="post_content">内容</string>
    <string name="post_send">发表</string>
    <string name="post_cancel">取消</string>
    <string name="post_page_title">发表帖子</string>
    <string name="post_footer_share">分享</string>
    <string name="post_footer_reply">回复</string>
    <string name="post_footer_author">作者</string>
    <string name="post_footer_mail">寄信</string>
    <string name="post_footer_more">更多</string>
    <string name="post_forward">转载</string>
    <string name="profile_footer_add">加为好友</string>
    <string name="reload_post">加载失败，是否重新加载?</string>
    <string name="user_result">用户</string>
    <string name="board_result">版面</string>
    <string name="topic_result">帖子</string>
    <string name="search_no_data">无数据，搜点别的吧</string>
    <string name="search_result_title">虎踞龙蟠搜索</string>
    <string name="post_att">附件</string>
    <string name="mail_notice">新邮件</string>
    <string name="ats_notice">爱特我的消息</string>
    <string name="re_notice">回复我的消息</string>
    <string name="userID">用户名</string>
    <string name="userpwd">用户密码</string>
    <string name="userLogin">  登录  </string>
    <string name="guestLogin">匿名</string>
    <string name="welcomeMSG"><a href="http://bbs.seu.edu.cn">欢迎来到东南大学虎踞龙蟠BBS站</a></string>
    <string name="login_message">正在努力登录中……</string>
    <string name="login_success">登录成功</string>
    <string name="user_logout">注销</string>
    <string name="user_logout_confirm">确定注销？</string>
    <string name="user_logout_positive">确定</string>
    <string name="user_logout_negative">点错了！</string>
    <string name="user_logout_indicate">正在注销……</string>
    <string name="post_edit">编辑</string>
    <string name="post_copy">复制</string>
    <string name="post_expand_here">从此处同主题展开</string>
    <string name="post_expand">同主题展开</string>
    <string name="post_mark_read_success">已设置版面文章为已读</string>
    <string name="post_mark_read_error">sorry，未能设置版面已读</string>
    <string name="post_delete_success">删除成功</string>
    <string name="post_delete_failed">删除失败</string>
    <string name="quick_reply_hint">快速回复</string>
    <string name="thread_view_author">查看作者</string>
    <string name="thread_mail_author">寄信给作者</string>
    <string name="thread_reply">回复</string>
    <string name="thread_share">分享本帖</string>
    <string name="thread_share_all">同主题分享</string>
    <string name="thread_copy">复制内容</string>
    <string name="profile_send_mail">寄信</string>
    <string name="profile_alive_number">生命力</string>
    <string name="profile_login_count">登录次数</string>
    <string name="profile_post_count">发表文章</string>
    <string name="profile_user_experience">经验值</string>
    <string name="profile_user_perform_title">表现值</string>
    <string name="profile_identity">身份</string>
    <string name="profile_gender">性别</string>
    <string name="profile_astrology">星座</string>
    <string name="profile_last_login">上次登录时间：</string>
    <string name="profile_add_friends_failed">添加失败</string>
    <string name="profile_add_friends_success">添加成功</string>
    <string name="profile_view_title">的个人资料</string>
    <string name="profile_user_sex_m">帅哥</string>
    <string name="profile_user_sex_f">美女</string>
    <string name="profile_user_sex_unknown">未知</string>
    <string name="profile_user_share">分享虎踞龙蟠好友</string>
    <string name="profile_user_add">添加好友</string>
    <string name="profile_user_mail">寄信</string>
    <string name="friends_view_profile">查看资料</string>
    <string name="friends_mail">寄信</string>
    <string name="friends_delete">删除好友</string>
    <string name="menu_hot">全站热点</string>
    <string name="menu_fav">收藏夹</string>
    <string name="menu_mail">站内信</string>
    <string name="menu_friends">在线好友</string>
    <string name="menu_recommend">推荐文章</string>
    <string name="menu_notice">提醒</string>
    <string name="menu_settings">设置</string>
    <string name="menu_sections">分类讨论区</string>
    <string name="menu_logout">注销</string>
    <string name="menu_about">关于</string>
    <string name="notice_title">新提醒</string>
    <string name="notice_clear">清除</string>
    <string name="notice_clear_network_err">网络错误</string>
    <string name="notice_clear_failed">清除失败</string>
    <string name="notice_clear_ok">清除成功</string>
    <string name="board_classic">经典模式</string>
    <string name="board_forum">论坛模式</string>
    <string name="board_thread">主题模式</string>
    <string name="board_top">置顶帖</string>
    <string name="board_digest">文摘区</string>
    <string name="board_mark">保留区</string>
    <string name="version_title">版本号: </string>
    <string name="contact_title">联系我</string>
    <string name="contact">>><a href="http://bbs.seu.edu.cn/bbsqry.php?userid=gfan\">gfan/</a>
        <a href="http://bbs.seu.edu.cn/bbsqry.php?userid=Nine\">Nine</a>@SBBS\n>><a href="http://www.weibo.com/gfanseu">gfanseu</a>@新浪微博</string>
    <string name="links_title">相关链接</string>
    <string name="links">东南大学虎踞龙蟠BBS: http://bbs.seu.edu.cn\n>>虎踞龙蟠手机客户端: http://bbs.seu.edu.cn/client\n>>项目主页： http://code.google.com/p/sbbs-android-app/</string>
    <string name="update_app_success">恭喜你已升级为最新程序！</string>
    <string name="update_app_error">升级失败，请重新下载！</string>
    <string name="unlogin_notice">请登录</string>
    <string name="about_quit">了解</string>
    <string name="about_advice">提交建议</string>
    <string name="commit">提交建议</string>
    <string name="advice_content_hint">请输入您的建议</string>
    <string name="load_more">加载更多内容</string>
    <string name="prgress_btn">正在加载中..</string>
    <string name="alert_title">提示</string>
    <string name="confirm_btn">确定</string>
    <string name="cancel_btn">取消</string>
    <string name="folder_image">收藏夹目录</string>
    <string name="up_folder">……上级目录</string>
    <string name="fav_empty_dir">空目录</string>
    <string name="fav_board">版面</string>
    <string name="fav_dir">目录</string>
    <string name="new_post_title">标题</string>
    <string name="new_post_content">内容</string>
    <string name="sending_post">正在发送……</string>
    <string name="del_post">删除</string>
    <string name="on_deleting">正在删除……</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_failure">删除失败</string>
    <string name="write_post">写文章</string>
    <string name="edit_post">编辑文章</string>
    <string name="post_title_null_alert">标题不能为空</string>
    <string name="post_success">发表成功</string>
    <string name="upload_att">上传附件</string>
    <string name="uploading_att">正在上传附件……</string>
    <string name="upload_att_finished">上传附件成功</string>
    <string name="anonymous_status_on">目前处于匿名发文状态</string>
    <string name="anonymous_status_off">目前处于非匿名发文状态</string>
    <string name="save_draft">已保存草稿。</string>
    <string name="mail_interface_title">站内信</string>
    <string name="new_mail_title">标题</string>
    <string name="new_mail_to">寄给</string>
    <string name="new_mail_content">内容</string>
    <string name="send_mail_success">已成功寄信</string>
    <string name="mail_sending">正在努力发送中……</string>
    <string name="mail_title_empty">标题不能为空</string>
    <string name="mail_receiver_empty">收信人不能为空</string>
    <string name="mail_box_switch">切换信箱</string>
    <string name="mail_current_box_notice">当前正在此信箱</string>
    <string name="mail_from">来自</string>
    <string name="pref_title">设置</string>
    <string name="prefs_account">帐号设置</string>
    <string name="pref_remember_me">记住密码</string>
    <string name="pref_autolgoin">自动登录</string>
    <string name="pref_topic">阅读设置</string>
    <string name="pref_select_first_page_title">启动加载页面</string>
    <string name="pref_select_first_page_summary">启动后要进入的页面，十大/收藏夹</string>
    <string name="pref_default_page">1</string>
    <string name="pref_all_topic_title">同主题阅读</string>
    <string name="pref_all_topic_summary">同主题阅读版面帖子</string>
    <string name="pref_auto_load_photo">自动加载图片</string>
    <string name="pref_blacklist_title">黑名单</string>
    <string name="pref_blacklist_summary">将不会显示黑名单中ID的帖子，使用空格分隔ID</string>
    <string name="pref_app_update">自动更新</string>
    <string name="pref_app_auto_onstart">启动时检查更新</string>
    <string name="pref_app_auto_summary">在程序启动时检查更新</string>
    <string name="pref_update_wifi">仅使用WiFi更新</string>
    <string name="pref_update_wifi_summary">当程序使用其他网络时不会检查更新</string>
    <string name="pref_update_interval">更新周期</string>
    <string name="pref_update_interval_summary">设定两次检查间隔时间</string>
    <string name="pref_update_interval_default">7</string>
    <string name="pref_night_mode">夜间模式</string>
    <string name="pref_check_updates_interval_default">30</string>
    <string name="service_new_mention_updates">新提醒</string>
    <string name="service_x_new_mentions">{0} 条新提醒</string>
    <string name="pref_title_notifications">后台提醒</string>
    <string name="pref_check_update_title">设置后台提醒</string>
    <string name="pref_check_update_summary">选中可以在后台提醒新回复提醒、爱特我的消息及新邮件</string>
    <string name="pref_check_updates_ringtone_title">选择提示铃声</string>
    <string name="pref_check_updates_ringtone_summary" />
    <string name="pref_check_updates_vibrate_title">振动</string>
    <string name="pref_check_updates_vibrate_summary">有新消息时振动提示</string>
    <string name="pref_check_updates_interval_title">检查频率</string>
    <string name="pref_check_updates_interval_summary">两次检查的间隔分钟数</string>
    <string name="pref_check_updates_interval_dialog_title">间隔分钟数</string>
    <string name="pull_to_refresh_tap_label">下拉刷新</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新</string>
    <string name="pull_to_refresh_release_label">释放刷新</string>
    <string name="pull_to_refresh_update_time">最近更新</string>
    <string name="loading">正在努力加载……</string>
    <string name="load_failure">加载失败</string>
    <string name="hot_no_data">目前没有十大，去别处溜达下吧~</string>
    <string name="load_io_error">网络错误</string>
    <string name="fav_no_data">您的收藏夹为空</string>
    <string name="mail_no_data">您的信箱为空</string>
    <string name="friends_no_data">目前无好友在线</string>
    <string name="user_no_data">无此用户</string>
    <string name="post_no_data">文章不存在</string>
    <string name="notice_no_data">目前没有新消息</string>
    <string name="login_indicate">请登录后使用</string>
    <string name="exit_indicate">再按一次返回键退出</string>
    <string name="in_box">收件箱</string>
    <string name="send_box">发件箱</string>
    <string name="trash_box">垃圾箱</string>
    <string name="user_profile">个人资料</string>
    <string name="profile_mail">寄信</string>
    <string name="profile_add">加为好友</string>
    <string name="del_friends_success">删除成功</string>
    <string name="del_friends_failed">删除失败</string>
    <string name="alert_postitive">确定</string>
    <string name="alert_negative">取消</string>
    <string name="section_reload_tip">一般分类讨论区版面不会有大的变化，且重新加载比较耗时，是否要重新加载？</string>
    <string name="tips_title">操作提示</string>
    <string name="tips">>>点击左上角Logo展开功能菜单，返回键退出。\n>>十大、分区十大等页面不会主动加载，请使用下拉刷新手动加载。\n>>同主题阅读时点击帖子
        条目进入单帖模式，可查看图标，快速回复等。\n>>如果找不到您要的功能请长按条目或按菜单键。\n>>任何意见或者建议，请联系我 :)</string>
    <string name="image_descr">图片</string>
    <string name="section_0">(0)本站系统</string>
    <string name="section_1">(1)东南大学</string>
    <string name="section_2">(2)电脑技术</string>
    <string name="section_3">(3)学术科学</string>
    <string name="section_4">(4)艺术文化</string>
    <string name="section_5">(5)乡情校谊</string>
    <string name="section_6">(6)休闲娱乐</string>
    <string name="section_7">(7)知性感性</string>
    <string name="section_8">(8)人文信息</string>
    <string name="section_9">(9)体坛风暴</string>
    <string name="section_a">(A)校务信箱</string>
    <string name="section_b">(B)社团群体</string>
</resources>