<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- 帐号设置 -->
    <PreferenceCategory
        android:key="prefs_account_setting"
        android:title="@string/prefs_account" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_remember_me"
            android:title="@string/pref_remember_me" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_autologin"
            android:title="@string/pref_autolgoin" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_update_settings"
        android:title="@string/pref_title_notifications" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_check_update"
            android:summary="@string/pref_check_update_summary"
            android:title="@string/pref_check_update_title" />

        <ListPreference
            android:defaultValue="@string/pref_check_updates_interval_default"
            android:dependency="pref_check_update"
            android:dialogTitle="@string/pref_check_updates_interval_dialog_title"
            android:entries="@array/check_update_intervals"
            android:entryValues="@array/check_update_intervals"
            android:key="pref_check_update_interval"
            android:summary="@string/pref_check_updates_interval_summary"
            android:title="@string/pref_check_updates_interval_title" />

        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="pref_check_update"
            android:key="ringtone"
            android:ringtoneType="notification"
            android:summary="@string/pref_check_updates_ringtone_summary"
            android:title="@string/pref_check_updates_ringtone_title" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="pref_check_update"
            android:key="pref_update_vibrate"
            android:summary="@string/pref_check_updates_vibrate_summary"
            android:title="@string/pref_check_updates_vibrate_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_topic"
        android:title="@string/pref_topic" >
        <ListPreference 
            android:defaultValue="@string/pref_default_font_size"
            android:dialogTitle="@string/pref_font_size_dialog_title"
            android:entries="@array/font_size_ajust_value"
            android:entryValues="@array/font_size_ajust_value"
            android:key="pref_font_size_ajust"
            android:summary="@string/pref_font_size_ajust_summary"
            android:title="@string/pref_font_size_ajust_title"
            />
        <CheckBoxPreference android:title="@string/pref_night_mode" android:defaultValue="false" android:key="pref_night_mode"/><ListPreference
            android:dialogTitle="@string/pref_select_first_page_title"
            android:entries="@array/page_select"
            android:entryValues="@array/page_select_values"
            android:key="pref_select_start_page"
            android:summary="@string/pref_select_first_page_summary"
            android:title="@string/pref_select_first_page_title" android:defaultValue="@string/pref_default_page"/>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_all_topic"
            android:summary="@string/pref_all_topic_summary"
            android:title="@string/pref_all_topic_title" />

        <EditTextPreference
            android:key="pref_blacklist"
            android:summary="@string/pref_blacklist_summary"
            android:title="@string/pref_blacklist_title" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_auto_load_photo"
            android:title="@string/pref_auto_load_photo" />
        
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_app_update"
        android:title="@string/pref_app_update" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_auto_update"
            android:summary="@string/pref_app_auto_summary"
            android:title="@string/pref_app_auto_onstart" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="pref_auto_update"
            android:key="pref_update_wifi"
            android:summary="@string/pref_update_wifi_summary"
            android:title="@string/pref_update_wifi" />
    </PreferenceCategory>

</PreferenceScreen>