<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/ribbon_menu_hot" android:title="@string/menu_hot" android:icon="@drawable/ic_nav_hotpoint"></item>
    <item android:id="@+id/ribbon_menu_fav" android:title="@string/menu_fav" android:icon="@drawable/ic_nav_favorite"></item>
    <item android:id="@+id/ribbon_menu_mail" android:title="@string/menu_mail" android:icon="@drawable/ic_nav_message"></item>
    <item android:id="@+id/ribbon_memu_friends" android:title="@string/menu_friends" android:icon="@drawable/ic_nav_friend"></item>
    <item android:id="@+id/ribbon_menu_profile" android:title="@string/user_profile" android:icon="@drawable/ic_nav_profile"></item>
	<item android:id="@+id/ribbon_menu_sections" android:title="@string/menu_sections" android:icon="@drawable/ic_nav_group"/>
    <item android:id="@+id/ribbon_menu_notice" android:title="@string/menu_notice" android:icon="@drawable/ic_nav_notice"></item>
    <item android:id="@+id/ribbon_menu_settings" android:title="@string/menu_settings" android:icon="@drawable/ic_nav_setting"></item>    
	<item android:id="@+id/ribbon_menu_about" android:title="@string/menu_about" android:icon="@drawable/ic_nav_about"></item>
	<item android:id="@+id/ribbon_menu_logout" android:title="@string/menu_logout" android:icon="@drawable/ic_nav_logout" />
	
    </menu>