<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/about_body"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:padding="2dp" >

            <TextView
                android:id="@+id/version_title"
                style="@style/LinkText.Bold.Big"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:text="@string/version_title" />

            <TextView
                android:id="@+id/version_name"
                style="@style/normalText.Big"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/version_title"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/version_name" />
            
            <TextView
                android:id="@+id/sthanks_title"
                style="@style/LinkText.Bold.Big"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:layout_below="@id/version_name"
                android:text="@string/special_thanks_title" />

            <TextView
                android:id="@+id/sthanks"
                style="@style/normalText.Big"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:layout_below="@id/sthanks_title"
                android:text="@string/special_thanks" />
            <View
                android:id="@+id/devider_two"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@id/sthanks"
                android:background="?android:attr/listDivider" />
     
            <TextView
                android:id="@+id/contact_title"
                style="@style/LinkText.Bold.Big"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:typeface="monospace"
                android:gravity="center"
                android:layout_below="@id/devider_two"
                android:text="@string/contact_title" />

            <TextView
                android:id="@+id/contact_me"
                style="@style/normalText.Big"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/contact_title"
                android:autoLink="all"
                android:gravity="center"
                android:text="@string/contact" />

            <View
                android:id="@+id/devider_three"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@id/contact_me"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/about_link_title"
                style="@style/LinkText.Bold.Big"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/devider_three"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/links_title" />

            <TextView
                android:id="@+id/about_link"
                style="@style/normalText.Big"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/about_link_title"
                android:autoLink="all"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:linksClickable="true"
                android:text="@string/links" />
        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/about_quit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:paddingBottom="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp"
            android:text="@string/about_quit"
            android:textSize="15sp" />

        <Button
            android:id="@+id/about_advice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginLeft="10dp"
            android:paddingBottom="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp"
            android:text="@string/about_advice"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>